Styling fixes to layout alignment across pages

--- a/src/components/FarmFooter.module.scss
+++ b/src/components/FarmFooter.module.scss
@@ -3,7 +3,6 @@
 
 .farmFooter {
   grid-area: footer;
-  margin: 10px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
