--- a/src/components/PoolOverview.scss
+++ b/src/components/PoolOverview.scss
@@ -9,14 +9,14 @@ div.poolWrapper {
   border: 1px solid var(--outline);
   border-radius: 10px;
   padding: 24px 32px;
-  @include breakpoint(md) {
-    padding: 24px 6%;
-    width: 80%;
-  }
-  @include breakpoint(sm) {
-    width: 90%;
-    padding: 24px 2%;
-  }
+  // @include breakpoint(md) {
+  //   padding: 24px 6%;
+  //   width: 80%;
+  // }
+  // @include breakpoint(sm) {
+  //   width: 90%;
+  //   padding: 24px 2%;
+  // }
   @include breakpoint(xs) {
     width: 100%;
     padding: 24px 2%;
