--- a/src/components/StakePage.module.scss
+++ b/src/components/StakePage.module.scss
@@ -2,13 +2,11 @@
 @import "../styles/viewports";
 
 div.stakeForm {
-  width: 60%;
   background: var(--background-element);
   box-shadow: var(--shadow);
   border: 1px solid var(--outline);
   border-radius: 10px;
   padding: 24px;
-  margin: 10px;
   @include breakpoint(md) {
     width: 100%;
     order: 1;
